--- a/src/drumee/builtins/window/sharebox/widget/sharebox-setting/skin/validity.scss
+++ b/src/drumee/builtins/window/sharebox/widget/sharebox-setting/skin/validity.scss
@@ -281,7 +281,7 @@
     &.switch-container {
       padding-left: 5px;
       text-align: center;
-      @include typo($size: 13px, $line: 16px, $color: $dt-secondary-text-color);
+      @include typo($size: 13px, $line: 16px, $color: var(--secondary-text-color));
     }
 
     &.btn-ok {
