--- a/src/drumee/modules/dmz/sharebox/skin/password.scss
+++ b/src/drumee/modules/dmz/sharebox/skin/password.scss
@@ -28,7 +28,7 @@
 
   &__row {
     align-items: center;
-    background-color:$dmz-default-block-background;
+    background-color:var(--default-block-background);
     border-radius:$default-border-radius;
     height: 100%;
     margin-bottom: 20px;
@@ -53,19 +53,19 @@
   }
 
   &__note {
-    @include typo($size: 20px, $line: 28px,$weight:400, $color: $dmz-default-text-reverse);
+    @include typo($size: 20px, $line: 28px,$weight:400, $color: var(--default-text-reverse));
     justify-content: center;
     text-align: center;
     width: 100%;
 
     &.title {
-      @include typo($size: 30px, $line: 32px, $weight:400, $color: $dmz-default-text-reverse);
+      @include typo($size: 30px, $line: 32px, $weight:400, $color: var(--default-text-reverse));
     }
   }
 
   &__icon {
     &.lock {
-      color: $dmz-default-icon-neutral;
+      color: var(--default-icon-neutral);
       height: 21px;
       padding: 0px;
       width: 21px;
@@ -83,17 +83,17 @@
 
   &__entry {
     & input {
-      @include typo($size: 18px, $line: 28px, $color: $dmz-default-text-color);
+      @include typo($size: 18px, $line: 28px, $color: var(--default-text-color));
       border-bottom: none;
       
       &::placeholder {
-        @include typo($size: 18px, $line: 28px, $weight: 300, $color:$dmz-default-text-placeholder);
+        @include typo($size: 18px, $line: 28px, $weight: 300, $color: var(--default-text-placeholder));
       }
     }
 
     &[data-status="error"] {
       border-radius:$default-border-radius;
-      border: 2px solid $dmz-default-border-error;
+      border: 2px solid var(--default-border-error);
     }
 
     & .entry-reminder_error {
@@ -118,7 +118,7 @@
   }
 
   &__button-confirm {
-    @include typo($size: 20px, $line: 28px, $color:$dmz-default-text-reverse);
+    @include typo($size: 20px, $line: 28px, $color: var(--default-text-reverse));
     align-items: center;
     background-color: var(--egreen-soft);
     border-radius:$default-border-radius;
