--- a/src/drumee/modules/dmz/meeting/skin/lobby.scss
+++ b/src/drumee/modules/dmz/meeting/skin/lobby.scss
@@ -1,7 +1,7 @@
 &__lobby {
   border-radius: $default-border-radius;
   width: 430px;
-  background-color: $dmz-default-background;
+  background-color: var(--default-background);
   justify-items: center;
   justify-content: center;
   align-items: center;
@@ -33,7 +33,7 @@
 
   &-text {
     text-align: center;
-    @include typo($size: 18px, $line: 28px, $weight: 300, $color: $dmz-default-text-color);
+    @include typo($size: 18px, $line: 28px, $weight: 300, $color: var(--default-text-color));
     width: 302px;
     margin-bottom: 30px;
     justify-content: center;
@@ -49,7 +49,7 @@
     width: auto;
 
     &.title {
-      @include typo($size: 18px, $line: 28px, $weight: 300, $color: $dmz-default-text-color);
+      @include typo($size: 18px, $line: 28px, $weight: 300, $color: var(--default-text-color));
       width: 100%;
       padding: 20px;
     }
@@ -70,7 +70,7 @@
     }
 
     &.check-hw {
-      @include typo($color: $dmz-default-text-color, $size: 16px, $line: 21px, $weight: 400);
+      @include typo($color: var(--default-text-color), $size: 16px, $line: 21px, $weight: 400);
       padding: 10px;
       padding: 10px;
       height:45px;
@@ -167,7 +167,7 @@
 
   .drumee-text {
     text-align: center;
-    @include typo($size: 18px, $line: 28px, $weight: 300, $color: $dmz-default-text-color);
+    @include typo($size: 18px, $line: 28px, $weight: 300, $color: var(--default-text-color));
     width: 100%;
     justify-content: center;
     padding: 5px 10px;
