--- a/src/drumee/modules/dmz/meeting/skin/username.scss
+++ b/src/drumee/modules/dmz/meeting/skin/username.scss
@@ -4,7 +4,7 @@
   &__main {
     width: 400px;
     height: 300px;
-    background-color: $dmz-default-background;
+    background-color: var(--default-background);
     justify-content: space-evenly;
     align-content: center;
     border-radius: $default-border-radius;
@@ -27,14 +27,14 @@
 
   &__title {
     justify-content: center;
-    @include typo($size: 18px, $line: 82px, $weight: 300, $color: $dmz-default-text-color);
+    @include typo($size: 18px, $line: 82px, $weight: 300, $color: var(--default-text-color));
   }
 
   &__input {
     margin-bottom: 30px;
 
     &-text {
-      @include typo($size: 18px, $line: 82px, $weight: 300, $color: $dmz-default-text-color);
+      @include typo($size: 18px, $line: 82px, $weight: 300, $color: var(--default-text-color));
       height: 60px;
       justify-content: center;
       flex-direction: column;
@@ -47,7 +47,7 @@
 
       input {
         &::placeholder {
-          @include typo($size: 16px, $weight: 300, $line: 19px, $color: $dmz-default-text-placeholder);
+          @include typo($size: 16px, $weight: 300, $line: 19px, $color: var(--default-text-placeholder));
         }
       }
     }
