--- a/src/drumee/builtins/window/account/security/skin/password-meter.scss
+++ b/src/drumee/builtins/window/account/security/skin/password-meter.scss
@@ -13,7 +13,7 @@
       width: calc(100% - 76px);
       overflow: hidden;
       background: linear-gradient(90deg,red,#ff0 50%,green);
-      border-radius: $default-border-radius-tiny;
+      border-radius: var(--border-radius-tiny);
       top: 50px;  
       margin-left: 27px;
       // border: 0.5px solid #aaa;
