--- a/src/drumee/builtins/window/account/skin/topbar.scss
+++ b/src/drumee/builtins/window/account/skin/topbar.scss
@@ -52,7 +52,7 @@
       &[data-radio="on"] {
         background-color: $account-default-background-hover;
         color: $account-default-text-reverse;
-        border-radius: $default-border-radius-tiny;
+        border-radius: var(--border-radius-tiny);
 
         &:hover {
           color: $account-default-text-hover ;
