--- a/src/drumee/builtins/window/helpdesk/widget/help-category/skin/index.scss
+++ b/src/drumee/builtins/window/helpdesk/widget/help-category/skin/index.scss
@@ -41,7 +41,7 @@
   }
   
   &__separator {
-    background-color: $helpdesk-separator-color;//$hd-default-separator-color;
+    background-color: var(--helpdesk-separator-color);//$hd-default-separator-color;
     height: 1px;
     margin: 5px;
     width: 100%;
@@ -57,18 +57,18 @@
     &.header {
       align-items: center;
       margin: 4px 0;
-      @include typo($size: 12px, $line: 14px, $weight: 300italic, $color: $helpdesk-default-text-color);
+      @include typo($size: 12px, $line: 14px, $weight: 300italic, $color: var(--default-text-color));
     }
 
     &.title {
       padding: 15px;
-      @include typo($size: 16px, $line: 18px, $weight: 700, $color: $helpdesk-default-text-color);
+      @include typo($size: 16px, $line: 18px, $weight: 700, $color: var(--default-text-color));
     }
 
     &.description {
       align-items: center;
       text-align: justify;
-      @include typo($size: 14px, $line: 1.4, $weight: 300italic, $color: $helpdesk-default-text-color);
+      @include typo($size: 14px, $line: 1.4, $weight: 300italic, $color: var(--default-text-color));
     }
 
     span {
