--- a/src/drumee/builtins/window/schedule/skin/index.scss
+++ b/src/drumee/builtins/window/schedule/skin/index.scss
@@ -120,7 +120,7 @@
       padding: 10px;
       background-color: grey;
       margin: 10px;
-      border-radius: $default-border-radius-tiny; //3px;
+      border-radius: var(--border-radius-tiny); //3px;
       @include typo($color: var(--default-text-reverse), $weight: 400, $line: 20px, $size: 16px);
     }
   }
