--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -15,8 +15,8 @@
 @import 'sharebox';
 @import 'sharebox';
 @import 'team';
-@import 'dmz';
-@import 'helpdesk';
+// @import 'dmz';
+// @import 'helpdesk';
 // @import 'drumee-transfer';
 
 
