--- a/src/drumee/builtins/media/row/skin/filename.scss
+++ b/src/drumee/builtins/media/row/skin/filename.scss
@@ -46,7 +46,7 @@
       background: white;
       justify-content: center;
       border: 1px solid var(--eorange-sunset);//#EA4D44;
-      border-radius: $default-border-radius-tiny;//3px;
+      border-radius: var(--border-radius-tiny);//3px;
       background-color: var(--default-bg); ;//#FFFFFF;
       box-shadow: 0 5px 8px 1px rgba(63,79,117,0.13), 0 6px 16px 0 rgba(86,65,113,0.08), 0 2px 14px 0 rgba(194,185,203,0);
       Z-index:200;
