--- a/src/drumee/builtins/window/helpdesk/widget/help-item/skin/index.scss
+++ b/src/drumee/builtins/window/helpdesk/widget/help-item/skin/index.scss
@@ -38,14 +38,14 @@
   &__note {
     &.button-text {
       align-items: center;
-      background-color: $helpdesk-background-button-color;// $hd-default-button-color;
+      background-color: var(--helpdesk-btn-bg);// $hd-default-button-color;
       border-radius: $default-border-radius;
       height: 70px;
       justify-content: center;
       padding: 5px;
       text-align: center;
       width: 100%;
-      @include typo($size: 14px, $line: 1.3, $color: $helpdesk-default-text-reverse);
+      @include typo($size: 14px, $line: 1.3, $color: var(--default-text-reverse));
     }
 
     &.content {
@@ -53,7 +53,7 @@
       height: 100%;
       text-align: justify;
       width: 100%;
-      @include typo($size: 14px, $line: 1.5, $color: $helpdesk-default-text-color);
+      @include typo($size: 14px, $line: 1.5, $color: var(--default-text-color));
       .help-button{
         position: relative;
         &::before{
@@ -121,9 +121,9 @@
           position: absolute;
           left: 0;
           border: 1px solid var(--default-frame);//#dde2e8;
-          border-radius: $default-border-radius-tiny;
-          background-color:$helpdesk-default-block-background;//#f2f2f2; 
-          fill:$helpdesk-icon; 
+          border-radius: var(--border-radius-tiny);
+          background-color:var(--default-block-background);//#f2f2f2; 
+          fill:var(--default-text-color); 
           padding: 1px;
         }
       }
