--- a/src/drumee/libs/reader/profile/skin/index.scss
+++ b/src/drumee/libs/reader/profile/skin/index.scss
@@ -16,7 +16,7 @@
     border: none;
     width: 40px;
     height: 40px;
-    border-radius: $default-border-radius-tiny;//3px;
+    border-radius: var(--border-radius-tiny);//3px;
     &[data-default="1"]{
       color: var(--default-icon-reverse);//white;
       svg{
